--- a/public/register.html
+++ b/public/register.html
@@ -3,11 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>login</title>
+  <title>register</title>
 </head>
 
 <body>
-  register
+  <form action="/register" method="POST">
+    <div>
+      <label>username
+        <input type="text" name="username">
+      </label>
+    </div>
+    <button>register</button>
+  </form>
 </body>
 
 </html>
