add "back to index"

--- a/public/test.html
+++ b/public/test.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <a href="/">back to index</a>
+
   <div>
     <button id="hello-button">hello</button>
     <span id="hello-label">-</span>
