--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <a href="/">back to index</a>
+
   <form action="" method="POST" id="login-form">
     <div>
       <label>username
