--- a/public/signup.html
+++ b/public/signup.html
@@ -14,9 +14,13 @@
       <label>email
         <input type="email" name="email">
       </label>
+    </div>
+    <div>
       <label>username
         <input type="text" name="username">
       </label>
+    </div>
+    <div>
       <label>password
         <input type="password" name="password">
       </label>
