--- a/public/signin.html
+++ b/public/signin.html
@@ -14,6 +14,8 @@
       <label>username
         <input type="text" name="username">
       </label>
+    </div>
+    <div>
       <label>password
         <input type="password" name="password">
       </label>
